bin/tests/snapshots/main__faster_zipattrswith_fix.snap
---
source: bin/tests/main.rs
expression: "& stdout"
---
--- tests/data/faster_zipattrswith.nix
+++ tests/data/faster_zipattrswith.nix [fixed]
@@ -1,10 +1,10 @@
 {
   # trivial case
-  _ = lib.zipAttrsWith (name: values: values) [{ a = 1; } { a = 2; b = 3; }];
+  _ = builtins.zipAttrsWith (name: values: values) [{ a = 1; } { a = 2; b = 3; }];
 
   # offer lint heuristically on this too
-  _ = nixpkgs.lib.zipAttrsWith (name: values: values) [{ a = 1; } { a = 2; b = 3; }];
+  _ = builtins.zipAttrsWith (name: values: values) [{ a = 1; } { a = 2; b = 3; }];
 
   # do not lint on `builtins`
   _ = builtins.zipAttrsWith (name: values: values) [
     { a = 1; }
