bin/tests/snapshots/main__legacy_let_syntax_lint.snap
---
source: bin/tests/main.rs
expression: "&stdout"
---
[W05] Warning: Using undocumented `let` syntax
   ╭─[tests/data/legacy_let_syntax.nix:1:1]
   │
 1 │ ╭─▶ let {
 5 │ ├─▶ }
   · │       
   · ╰─────── Prefer rec over undocumented let syntax
───╯
