bin/tests/snapshots/main__manual_inherit_from_fix.snap
---
source: bin/tests/main.rs
expression: "&stdout"
---
--- tests/data/manual_inherit_from.nix
+++ tests/data/manual_inherit_from.nix [fixed]
@@ -1,8 +1,8 @@
 let
   a = {b = 2; c = 3;};
 in
 {
-  b = a.b;
-  c = a.c;
+  inherit (a) b;
+  inherit (a) c;
 }
