bin/tests/snapshots/main__manual_inherit_lint.snap
---
source: bin/tests/main.rs
expression: "&stdout"
---
[W03] Warning: Assignment instead of inherit
   ╭─[tests/data/manual_inherit.nix:7:3]
   │
 7 │   a = a;
   ·   ───┬──  
   ·      ╰──── This assignment is better written with inherit
───╯
